--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -1,7 +1,9 @@
+/** COLORS **/
+
 // Brand Colors
-$primary: #ff6e42; // Balance blue for conveying trust while promoting calm
-$secondary: #6e57b5; // Muted purple for mindfulness and creativity
-$accent: #4bb58e; // Teal-green combining healing aspects of blue and green
+$primary: #ff6e42;
+$secondary: #6e57b5;
+$accent: #4bb58e;
 
 // Text and Background
 $text-color: #2d3748;
@@ -18,3 +20,26 @@ $neutral-light: #edf2f7;
 $success: #38a169;
 $warning: #dd6b20;
 $error: #e53e3e;
+
+/** FONTS **/
+// Font families
+$font-primary:
+  "Inter",
+  -apple-system,
+  BlinkMacSystemFont,
+  "Segoe UI",
+  Roboto,
+  Oxygen,
+  Ubuntu,
+  Cantarell,
+  "Open Sans",
+  "Helvetica Neue",
+  sans-serif;
+$font-secondary: $font-primary;
+
+// Font weights
+$font-weight-light: 300;
+$font-weight-regular: 400;
+$font-weight-medium: 500;
+$font-weight-semibold: 600;
+$font-weight-bold: 700;
