Home Page UI completed

--- a/src/components/common/HeroSection/HeroSection.module.scss
+++ b/src/components/common/HeroSection/HeroSection.module.scss
@@ -96,7 +96,7 @@
     background-color: $secondary;
     color: white;
     border: none;
-    border-radius: $border-radius-lg;
+    border-radius: $border-radius-md;
     padding: $space-3 $space-6;
     font-size: 1.8rem;
     font-weight: $font-weight-semibold;
