--- a/src/components/common/Navbar/Navbar.module.scss
+++ b/src/components/common/Navbar/Navbar.module.scss
@@ -280,7 +280,7 @@
     align-items: center;
     justify-content: center;
     gap: $space-2;
-    padding: $space-2 $space-4;
+    padding: 0.6rem $space-4;
     font-size: 1.5rem;
     font-weight: $font-weight-medium;
     transition: all 0.2s ease;
