--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -40,6 +40,8 @@ $space-5: 2.4rem; // 24px
 $space-6: 3.2rem; // 32px
 $space-7: 4rem; // 40px
 $space-8: 4.8rem; // 48px
+$space-9: 6.4rem; // 64px
+$space-10: 8rem; // 80px;
 
 // Breakpoints
 $breakpoints: (
