--- a/src/components/common/Navbar/Navbar.module.scss
+++ b/src/components/common/Navbar/Navbar.module.scss
@@ -11,6 +11,7 @@
   border-radius: 0.8rem;
   background-color: rgba($surface-color, 0.97);
   padding: $space-3 0;
+  width: 120rem;
   @include shadow-md;
 
   @include media-breakpoint-down(md) {
