--- a/src/pages/Feed/FeedPage.module.scss
+++ b/src/pages/Feed/FeedPage.module.scss
@@ -1,4 +1,3 @@
-// FeedPage.module.scss
 @use "../../styles/variables" as *;
 @use "../../styles/mixins" as *;
 
@@ -21,7 +20,7 @@
   }
 
   button {
-    border-radius: $border-radius-md;
+    margin: 0 auto;
   }
 }
 
